hphp/test/slow/class_constant/abstract_const11.php.expectf
Fatal error: Cannot inherit previously-inherited constant FOO in %stest/slow/class_constant/abstract_const11.php on line 15
